--- a/package.json
+++ b/package.json
@@ -38,6 +38,13 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "prettier": "prettier",
+    "netlify-lambda": "netlify-lambda",
+    "gatsby": "gatsby",
+    "npm-run-all": "npm-run-all",
+    "rimraf": "rimraf",
+    "run-p": "run-p",
+    "run-s": "run-s",
     "clean": "rimraf .cache public",
     "start:app": "npm run develop",
     "start:lambda": "netlify-lambda serve src/lambda",
@@ -45,7 +52,7 @@
     "build:app": "npm run clean && gatsby build",
     "build:lambda": "netlify-lambda build src/lambda",
     "build": "run-p build:**",
-    "develop": "npm run clean && gatsby develop",
+    "develop": "run-s clean && gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -55,6 +62,6 @@
     "netlify-lambda": "^1.4.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.15.3",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.3"
   }
 }
