--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "^2.0.15",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-plantuml-lite": "^0.0.5",
+    "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-source-filesystem": "^2.0.26",
